--- a/Part2.1-CSS/robot/style.css
+++ b/Part2.1-CSS/robot/style.css
@@ -4,6 +4,7 @@ h1 {
 }
 
 .robots {
+	/* flex-wrap: wrap; */
 }
 
 .head, 
@@ -24,6 +25,7 @@ h1 {
 } 
 
 .eyes {
+	position: relative;
 	
 }
 
@@ -33,7 +35,8 @@ h1 {
 }
 
 .upper_body { 
-	width: 300px; 
+	width: 300px;
+	margin: 0 auto;
 	height: 150px;
 	display: flex; 
 } 
@@ -55,7 +58,8 @@ h1 {
 .torso { 
 	width: 200px; 
 	height: 200px;
-	border-radius: 0 0 50px 50px; 
+	border-radius: 0 0 50px 50px;
+	margin: 0 auto;
 } 
 
 .lower_body { 
@@ -73,7 +77,7 @@ h1 {
 } 
 
 .left_leg { 
-	margin-left: 45px; 
+	margin-left: 35px; 
 } 
 
 .left_leg:hover {
@@ -85,7 +89,8 @@ h1 {
 }
 
 .right_leg { 
-	margin-left: 30px; 
+	margin-left: 135px;
+	
 }
 
 .left_eye, .right_eye { 
@@ -98,15 +103,16 @@ h1 {
 .left_eye { 
 	/* These properties are new and you haven't encountered
 	in this course. Check out CSS Tricks to see what it does! */
-	position: relative; 
+	position: absolute;
 	top: 100px; 
 	left: 40px; 
 } 
 
 .right_eye { 
-	position: relative; 
+	position: absolute;
 	top: 100px; 
-	left: 120px; 
+	left: 120px;
+	/* right: -40px; */
 }
 
 
