--- a/Part4-css_grid/project-start/style.css
+++ b/Part4-css_grid/project-start/style.css
@@ -1,5 +1,6 @@
 body {
     margin: auto 0;
+    font-family: Arial;
 }
 
 .zone {
@@ -20,7 +21,20 @@ body {
     box-shadow:rgba(0,0,0,0.8) 0px 5px 15px, inset rgba(0,0,0,0.15) 0px -10px 20px;
 }
 
+.box:hover {
+    -webkit-transform:  rotate(-7deg);
+    -moz-transform:    rotate(-7deg);
+    -o-transform:  rotate(-7deg);
+    transform: rotate(-7deg);
+}
+
 /* NAV */
+.sticky {
+    position: fixed;
+    top: 0;                 /* These 3 properties together, will make navigation sticky */
+    width: 100%;
+}
+
 .main-nav {
     display: flex;              /* activates flexbox */
     list-style: none;
@@ -56,6 +70,10 @@ a {
     align-items: center;
     justify-content: center;
     height: 50vh;       /* GOOD TO USE WITH CONTAINERS this will do the cover responsive (vh = viewport height) */
+}
+
+.cover {
+    width: 30rem;
 }
 
 /** GRID **/
